--- a/TableTennisDrillApp/MainWindow.xaml
+++ b/TableTennisDrillApp/MainWindow.xaml
@@ -13,7 +13,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <views:DrillsListMenuView Grid.Column="0"/>
+        <views:DrillsListMenuView Grid.Column="0" DataContext="{Binding CurrentViewModel}"/>
 
         <Border Grid.Column="1" Background="#21130d"/>
 
