--- a/TableTennisDrillApp/Views/CategoriesViews/CategoryListView.xaml
+++ b/TableTennisDrillApp/Views/CategoriesViews/CategoryListView.xaml
@@ -8,13 +8,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="180" d:DesignWidth="300">
 
-    <UserControl.DataContext>
-        <vmc:CategoryListViewModel/>
-    </UserControl.DataContext>
+    <!--<d:UserControl.DataContext>
+        <vmc:CategoryListViewModel />
+    </d:UserControl.DataContext>-->
     
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding Categories}">
+            <ItemsControl ItemsSource="{Binding Categories}" HorizontalAlignment="Center">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                             <ToggleButton Content="{Binding Path=CategoryName}"
@@ -24,9 +24,14 @@
                                           FontSize="14"
                                           FontWeight="Medium"
                                           Width="100"
-                                          Margin="2"></ToggleButton>
+                                          Margin="8"></ToggleButton>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
             </ItemsControl>
         </ScrollViewer>
     </Grid>
