--- a/TableTennisDrillApp/MainWindow.xaml
+++ b/TableTennisDrillApp/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:views="clr-namespace:TableTennisDrillApp.Views"
         xmlns:local="clr-namespace:TableTennisDrillApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1200">
+        Title="MainWindow" Height="800" Width="1600">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="320"/>
@@ -15,7 +15,7 @@
 
         <views:DrillsListMenuView Grid.Column="0" DataContext="{Binding CurrentViewModel}"/>
 
-        <Border Grid.Column="1" Background="#21130d"/>
+        <Border Grid.Column="1" Background="#052D40"/>
 
     </Grid>
 </Window>
