Attempt to add ActiveDrillStore

--- a/TableTennisDrillApp/MainWindow.xaml
+++ b/TableTennisDrillApp/MainWindow.xaml
@@ -4,18 +4,21 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:TableTennisDrillApp.Views"
+        xmlns:contentViews="clr-namespace:TableTennisDrillApp.Views.DrillContentViews"
         xmlns:local="clr-namespace:TableTennisDrillApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="1600">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="320"/>
+            <ColumnDefinition Width="350"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
         <views:DrillsListMenuView Grid.Column="0" DataContext="{Binding CurrentViewModel}"/>
 
-        <Border Grid.Column="1" Background="#052D40"/>
+        <Border Grid.Column="1" Background="#052D40" >
+            <contentViews:DrillContentView />
+        </Border>
 
     </Grid>
 </Window>
