--- a/TableTennisDrillApp/Views/DrillContentViews/DrillContentView.xaml
+++ b/TableTennisDrillApp/Views/DrillContentViews/DrillContentView.xaml
@@ -17,7 +17,7 @@
         </Grid.ColumnDefinitions>
 
         <Border Grid.Row="0" Grid.Column="0" BorderBrush="White" BorderThickness="2" CornerRadius="30" Margin="20">
-            <Image />
+            <Image Source="{Binding ImageOne}"/>
         </Border>
 
         <Border Grid.Row="0" Grid.Column="1" BorderBrush="White" BorderThickness="2" CornerRadius="30" Margin="20">
