Attempt to move MainVIewModel to ActiveDrillStore

--- a/TableTennisDrillApp/Views/DrillsListViews/DrillsListView.xaml
+++ b/TableTennisDrillApp/Views/DrillsListViews/DrillsListView.xaml
@@ -36,6 +36,7 @@
                     <RadioButton 
                         IsChecked="{Binding IsSelected}" 
                         Style="{StaticResource DrillListItemRadioButton}"
+                        Command="{Binding UpdateDrillContentCommand}"
                         GroupName="Drills">
                         
                         
