--- a/TableTennisDrillApp/Styles/Dictionary1.xaml
+++ b/TableTennisDrillApp/Styles/Dictionary1.xaml
@@ -21,8 +21,8 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
 
-                            <Border Grid.Column="0" Grid.RowSpan="3" Grid.Row="0" Margin="10" BorderBrush="#0099ff" Background="Black" BorderThickness="2">
-
+                            <Border Grid.Column="0" Grid.RowSpan="3" Grid.Row="0" Margin="10" BorderBrush="#0099ff" BorderThickness="2">
+                                <Image Source="{Binding FirstImage}" />
                             </Border>
 
                             <TextBlock 
