--- a/TableTennisDrillApp/Views/CategoriesViews/CategoryListView.xaml
+++ b/TableTennisDrillApp/Views/CategoriesViews/CategoryListView.xaml
@@ -19,7 +19,7 @@
                     <DataTemplate>
                             <ToggleButton Content="{Binding Path=CategoryName}"
                                           IsChecked="{Binding IsChecked, Mode=TwoWay}"
-                                          Command="{Binding}"
+                                          Command="{Binding UpdateSelectedCategoriesCommand}"
                                           Foreground="White" 
                                           Background="#2596be"
                                           FontSize="14"
