--- a/TableTennisDrillApp/Views/CategoriesViews/CategoryListView.xaml
+++ b/TableTennisDrillApp/Views/CategoriesViews/CategoryListView.xaml
@@ -6,7 +6,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TableTennisDrillApp.Views.CategoriesViews"
              mc:Ignorable="d" 
-             d:DesignHeight="180" d:DesignWidth="300">
+             d:DesignWidth="300">
+    <!--d:DesignHeight="180" d:DesignWidth="300"-->
 
     <!--<d:UserControl.DataContext>
         <vmc:CategoryListViewModel />
@@ -15,7 +16,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <ToggleButton IsChecked="{Binding IsCategoriesMenuActive, Mode=TwoWay}" Background="Transparent" Margin="0" Padding="0">
